fixed alignment issue mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,7 +31,7 @@ body {
   display: block;
   padding-left: 60px;
 }
-p.tvList li {
+li {
 }
 .ww {
   color: blue;
@@ -160,7 +160,7 @@ footer p {
   ul.news-list.grid-container {
     display: block;
     padding: 0;
-    padding-left: 15px;
+    padding-left: 0px;
   }
   .grid-container {
     display: grid;
@@ -331,7 +331,7 @@ button#btn {
 }
 @media (min-width: 768px) {
   .card img {
-    height: 11em;
-    width: 11em;
+    height: 14em;
+    width: 15em;
   }
 }
